# basic-validation-controller

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alt  Justfile  README.md  gencert.sh  kind-config.yaml
deploy/: debug.yaml  deployment.yaml  webhook-ca.yaml  webhook.yaml
golang/: Dockerfile  go.mod  go.sum  main.go
src/: main.rs
