[package]
name = "basic-validation-controller"
version = "0.1.0"
authors = ["SachinMaharana <sachin.nicky@gmail.com>"]
edition = "2018"

[dependencies]
kube = { version = "0.88.1", features = ["admission", "rustls-tls"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
actix-rt = "2.1.0"
actix-web = { version = "4", features = ["rustls-0_21"] }
anyhow = "1.0.40"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
forgiving-semver = "0.11.0"
json-patch = "0.2.6"
reqwest = { version = "0.11.3", features = ["blocking"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
regex = "1.4.5"
log = "0.4.0"
env_logger = "0.8.3"
envy = "0.4.2"
futures = "0.3.14"
rustls = "0.21"
rustls-pemfile = "1"

[dependencies.serde_with]
version = "1.8.0"
